// $Id$

Apache Solr Multilingual 6.x-2.0-alpha1, 2010-xx-xx
---------------------------------------------------
[#805336] mkalkbrenner: Hightlighting & body stored="false": no snippets
[#805414] ayalon, mkalkbrenner: Compatibility to apachesolr 2.x-dev
[#803016] ayalon, mkalkbrenner: Fatal error in combination with apachesolr 6.x-2.x-dev: function _apachesolr_nodeapi_update($translation_node);
[#805336] mkalkbrenner: Hightlighting & body stored="false": no snippets
[#793912] mkalkbrenner: Think about "Search fields" tab
[#783924] mkalkbrenner: think about ts_*
[       ] mkalkbrenenr, mhuder: added advanced language specific index options
[       ] mhuder: only validate spell length if any language has been selected
[       ] mhuder: updates on ts_ fields support
[       ] mkalkbrenner: If "language" neutral" is mapped to another language the document gets indexed using this language. "Language neutral" will not occure as an filter in the language facet anymore.
[       ] mkalkbrenner: Skip dataDir in solrconfig.xml for Multi Core Setup
[       ] mkalkbrenner: Allow user to adjust Auto Commit Max Time
[#394728] mkalkbrenner: By default filter by the user's language and provide setting on settings page.
[       ] mkalkbrenner: fixed bug that language specific highlighting did not work if spell checking is disabled
[       ] mkalkbrenner: warn user if changes to drupal config require changes to solr config
[       ] mkalkbrenner: added alternative language facet block
[#863154] mkalkbrenner: SpellCheckComponent error
[#866546] mkalkbrenner: Warning: Call-time pass-by-reference
[#887064] mkalkbrenner: How to configure Tomcat to work with Accents and Umlauts
[       ] mkalkbrenner: merged schema.xml drupal-1.1
[       ] mkalkbrenner: set preserveOriginal to 1 by default like apachesolr 6.x-1.2 does
[       ] mkalkbrenner: Apply advanced settings to config files created by "Unique (Non-English) Language Configuration Download" as well