@@ -17,7 +17,7 @@
  limitations under the License.
 -->
 
-<config>
+<config name="drupal-multilingual-7.1.0-alpha1">
 
   <!-- Set this to 'false' if you want solr to continue working after it has 
        encountered an severe configuration error.  In a production environment, 
@@ -51,7 +51,7 @@
     -->
     <ramBufferSizeMB>32</ramBufferSizeMB>
     <maxMergeDocs>2147483647</maxMergeDocs>
-    <maxFieldLength>10000</maxFieldLength>
+    <maxFieldLength>20000</maxFieldLength>
     <writeLockTimeout>1000</writeLockTimeout>
     <commitLockTimeout>10000</commitLockTimeout>
 
@@ -422,7 +422,8 @@
     <lst name="master">
         <str name="replicateAfter">commit</str>
         <str name="replicateAfter">startup</str>
-        <str name="confFiles">schema.xml,stopwords.txt,elevate.xml</str>
+        FIXME add language specific config files to replication
+        <str name="confFiles">schema.xml,mapping-ISOLatin1Accent.txt,protwords.txt,stopwords.txt,synonyms.txt,elevate.xml</str>
     </lst>
 </requestHandler>
  MASTER_REPLICATION_END -->
@@ -481,10 +482,10 @@
      <str name="f.body.hl.alternateField">teaser</str>
      <str name="f.body.hl.maxAlternateFieldLength">256</str>
      <!-- JS: I wasn't getting good results here... I'm turning off for now
-     because I was getting periods (.) by themselves at the begining of
-     snippets and don't feel like deubgging anymore.  Without the regex is
+     because I was getting periods (.) by themselves at the beginning of
+     snippets and don't feel like debugging anymore.  Without the regex is
      faster too -->
-     <!--<str name="f.body_result.hl.fragmenter">regex</str>--> <!-- defined below -->
+     <!--<str name="f.body.hl.fragmenter">regex</str>--> <!-- defined below -->
 
     <!-- By default, don't spell check -->
       <str name="spellcheck">false</str>
@@ -493,8 +494,7 @@
       <str name="spellcheck.extendedResults">false</str>
       <!--  The number of suggestions to return -->
       <str name="spellcheck.count">1</str>
-
-     </lst>
+    </lst>
     <arr name="last-components">
       <str>spellcheck</str>
     </arr>
