@@ -1,5 +1,11 @@
 // $Id$
 
+Apache Solr Multilingual 7.x-1.0-alpha1, 2011-xx-xx
+---------------------------------------------------
+[       ] daspeter: intial port to d7
+[       ] mkalkbrenner: adjusted schema.xml and solrconfig.xml according to apachesolr-7.x-1.0-beta3
+
+
 Apache Solr Multilingual 6.x-2.0-alpha1, 2010-xx-xx
 ---------------------------------------------------
 [#805336] mkalkbrenner: Hightlighting & body stored="false": no snippets
